made css changes to resolve header overlap issue

--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,12 @@
     --blue: rgb(79, 62, 233);
 }
 
+html {
+    scroll-padding-top: 60px
+}
+
 body {
-    padding-top: 60px;
+    scroll-padding-top: 60px;
     background: rgb(80,80,100);
     background: linear-gradient(140deg, rgba(80,80,100,1) 0%, rgba(0,0,50,1) 50%, rgba(0,0,36,1) 100%);
 }
@@ -16,6 +20,9 @@ body {
 .nav {
     flex: 1;
     position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
 }
 
 .nav ul {
@@ -52,7 +59,7 @@ body {
     color: darkmagenta;
     background-color: white;
     border: 5px solid violet;
-    scroll-padding-top: 60px;
+    /* scroll-padding-top: 80px; */
     padding: 20px;
     margin: 20px;
 }
